// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> create Select component 1`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-7WmJd56s"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control"
        >
          <button
            className="fd-button--light sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> create Select component 2`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-ei5J6WhEr"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select blue"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control"
        >
          <button
            className="fd-button--light sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> create Select component 3`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-NKhEOTR-Q"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        standard={true}
        tabIndex={0}
      >
        <div
          className="fd-select__control"
        >
          <button
            className="fd-button--light sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> create Select component 4`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-ZAwyY_V2Z"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control"
        >
          <button
            className="fd-button--light sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> create Select component 5`] = `
<div
  className="fd-popover"
>
  <div
    onFocus={[Function]}
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  >
    <div
      className="fd-popover__control"
    >
      <div
        aria-controls="fd-Ijwr1gHMY"
        aria-expanded={false}
        aria-haspopup={true}
        className="fd-select"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="fd-select__control"
        >
          <button
            className="fd-button--light sap-icon--slim-arrow-down fd-select__button"
            type="button"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
